<resources>
    <string name="nul"></string>
    <string name="name_hint">稱呼</string>
    <string name="junior">晚輩</string>
    <string name="medior">平輩</string>
    <string name="senior">長輩</string>
    <string name="bless">🙏</string>
    <string name="show_greets">⋮</string>
    <string name="app_name">祝福App</string>
    <string name="convert">格式 ⇆</string>
    <string name="copy">COPY ⏍</string>
    <string name="emoji">😄</string>
    <string name="tutorial">隨時送上祝福~</string>
    <string name="blessTutorial">教學</string>
    <string name="dear">親愛的</string>
    <string name="wish">祝</string>
    <string name="colon">:</string>
</resources>
