<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_240">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/blank">

        <LinearLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bar"
            android:elevation="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp">

            <RelativeLayout
                android:id="@+id/barL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nul">

                <Button
                    android:id="@+id/home_button"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rect_round45"
                    android:elevation="5dp" />

                <ImageView
                    android:id="@+id/home_icon"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/home_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="21.5dp"
                    android:adjustViewBounds="true"
                    android:elevation="5dp"
                    android:src="@drawable/home_icon" />

                <RelativeLayout
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/dark_gray_a50_r45"
                    android:elevation="8dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_Area"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nul">

                <Button
                    android:id="@+id/settingButton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rect_round45"
                    android:elevation="5dp" />

                <ImageView
                    android:id="@+id/setting_icon"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/settingButton"
                    android:layout_alignRight="@+id/settingButton"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="24dp"
                    android:adjustViewBounds="true"
                    android:elevation="5dp"
                    android:src="@drawable/bless_setting" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/barR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nul">

                <Button
                    android:id="@+id/tut_button"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rect_round45"
                    android:elevation="5dp" />

                <ImageView
                    android:id="@+id/tutorial_icon"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tut_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="29dp"
                    android:adjustViewBounds="true"
                    android:elevation="5dp"
                    android:src="@drawable/tutorial_icon" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <RelativeLayout
        android:id="@+id/generate_place"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/blank">

        <Button
            android:id="@+id/generate_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/nul"
            android:foreground="@drawable/rect_top_round_80"/>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/copy_and_convert"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/bless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/relativeLayout"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:shadowColor="@color/white"
                android:shadowRadius="30"
                android:text="@string/bless"
                android:textColor="@color/white"
                android:textSize="55sp" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="0dp"
                android:layout_height="155dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/copy_and_convert"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/rect_round30_stroke1_white"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp">

            <Button
                android:id="@+id/copy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/nul"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="@color/gray_50"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/convert_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/nul"
                android:gravity="center"
                android:text="@string/convert"
                android:textStyle="bold"
                android:textColor="@color/gray_50"
                android:textSize="28sp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/icon_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/imageView"
            android:fontFamily="@font/open_huninn"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textFontWeight="1"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/emoji_show_place"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/generate_place">

        <Button
            android:id="@+id/show_button"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:outlineAmbientShadowColor="@color/nul"
            android:outlineSpotShadowColor="@color/nul"
            android:backgroundTint="@color/nul"
            android:gravity="center"
            android:text="@string/show_greets"
            android:textColor="@color/gray_10"
            android:textSize="35sp"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/emojiAdd"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:outlineAmbientShadowColor="@color/nul"
            android:outlineSpotShadowColor="@color/nul"
            android:shadowColor="@color/green"
            android:shadowRadius="40"
            android:backgroundTint="@color/nul"
            android:text="@string/emoji"
            android:gravity="center"
            android:textColor="@color/tick"
            android:textSize="30sp"
            app:shapeAppearanceOverlay="@style/emoji_btn" />
    </RelativeLayout>

    <com.bosphere.fadingedgelayout.FadingEdgeLayout
        android:id="@+id/fading_edge_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:fel_edge="top|bottom"
        app:fel_size_bottom="20dp"
        app:fel_size_top="20dp"
        app:layout_constraintBottom_toTopOf="@+id/generate_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_bar">

        <ScrollView
            android:id="@+id/showGreet_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/rect_round15">

            <TextView
                android:id="@+id/textField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:maxWidth="300dp"
                android:text="@string/tutorial"
                android:textColor="@color/gray_150"
                android:textSize="33sp" />
        </ScrollView>
    </com.bosphere.fadingedgelayout.FadingEdgeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>